--- a/VRChat/91/1128891.html
+++ b/VRChat/91/1128891.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "MJTYYb/aywF3J3zoC9KqpfYdnRUj2S6hHtACodnHAog="></script>
+    "hVi/9qX+Gcj2p19eAS2px9H/ydrNyMyUT2UJ7YCAj4o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホースバンド","description":"クリスマスシーズンにぴったり？のリングを作りました。\n大好きな方とお揃いでつけてみてはいかがでしょうか？\n私はつけません。\n△564※ネジは回りません\n\n改変、商用利用、アバターやワールドへの同梱可\n再配布不可\n\nかぷち屋のブースもよろしくね\nhttps://capettiya.booth.pm/","url":"https://booth.pm/ja/items/1128891","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f74fba72-857f-46dc-880c-6cd834faad0f/i/1128891/3474bae8-c263-49f1-9ffd-f64c081517fe_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="MJTYYb/aywF3J3zoC9KqpfYdnRUj2S6hHtACodnHAog="></script>
+    nonce="hVi/9qX+Gcj2p19eAS2px9H/ydrNyMyUT2UJ7YCAj4o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1128891/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               84
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1128891/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               84
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
