--- a/VRChat/92/1125492.html
+++ b/VRChat/92/1125492.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YSUf6z1STQcBMKPdTUx1fEFoQETlXET3B/RUxsD8dvA="></script>
+    "+EuvSfzZgnpPEEmjV8905JItMRlC6Jh2HzWphlMe8rw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"エリーのブーツ","description":"エリーのブーツです。\n\nロゴの詳細\nhttps://note.mu/atmark41/n/n50e9cf4c901c\n\n△580(両足)\n\n設定で両面描画推奨\n※画像2はarktoonシェーダーの例\n\n〇内容物\n\n　　elie_Boots.fbx\n　　bootsR.png\n　　bootsL.png\n\n\n利用規約\n\n〇本モデルの著作権はatmarkに帰属します。\n\n〇再配布、販売は禁止です。\n\n〇改変可\n　\n〇本モデルを使用することによって生じたいかなるトラブルや損害についてatmarkは責任を負わないものとします。\n\n\n質問等はTwitter【@atmark41】までお願いします。","url":"https://booth.pm/ja/items/1125492","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b5c5b880-b11f-4114-807f-4a3e0e9de138/i/1125492/d258e0c5-7027-4427-ac0d-39845a02cebf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YSUf6z1STQcBMKPdTUx1fEFoQETlXET3B/RUxsD8dvA="></script>
+    nonce="+EuvSfzZgnpPEEmjV8905JItMRlC6Jh2HzWphlMe8rw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1125492/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1125492/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               22
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
