--- a/VRChat/26/1123226.html
+++ b/VRChat/26/1123226.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iive9wnVP0bM/5frXXJtaa1u+Ud/kYEULSfoYUB+CSY="></script>
+    "ym1k/Mt0EUOZivlUaClnABxylKzg5TxPXZwa77McrS0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"エリーのペンダント型キーホルダー","description":"エリーのペンダント型キーホルダーです。\n\n詳細はnoteで書いた通り\nhttps://note.mu/atmark41/n/n50e9cf4c901c\n\n△1278\n\nシェーダーで設定すれば写真2枚目のような見た目になります。\n※写真2はarktoonシェーダーで設定\n\n内容\n\npendant_key_holder.fbx\n\n\n利用規約\n\n〇本モデルの著作権はatmarkに帰属します。\n\n〇再配布、販売は禁止です。\n\n〇改変可\n　\n〇本モデルを使用することによって生じたいかなるトラブルや損害についてatmarkは責任を負わないものとします。\n\n\n質問等はTwitter【@atmark41】までお願いします。","url":"https://booth.pm/ja/items/1123226","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b5c5b880-b11f-4114-807f-4a3e0e9de138/i/1123226/0c7cffac-8866-4eba-88bf-0337843dce10_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iive9wnVP0bM/5frXXJtaa1u+Ud/kYEULSfoYUB+CSY="></script>
+    nonce="ym1k/Mt0EUOZivlUaClnABxylKzg5TxPXZwa77McrS0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1123226/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1123226/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
