--- a/VRChat/28/1121528.html
+++ b/VRChat/28/1121528.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "y6Op3QWaFUeDM5TEkqUWcU5VQqnjCZqHEuYtCzUtJ28="></script>
+    "5lUauC5fL+rQo+hs9pzyWSVdokvCR4N/1PUtOSP0hfw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ポッキーソード","description":"ねこまモチーフのかっこいい武器を作ろうとしたらできました。疲れた体にお菓子おいしいです！\n\nこんなポッキーが欲しい…☆\n\n△606\n\n\n〇内容物\n\n　　Pokky_box.fbx\n　　pokkybox.png\n　　pokky.png\n\n\n利用規約\n\n〇本モデルの著作権はatmarkに帰属します。\n\n〇再配布、販売は禁止です。\n\n〇改変可\n　\n〇本モデルを使用することによって生じたいかなるトラブルや損害についてatmarkは責任を負わないものとします。\n\n\n質問等はTwitter【@atmark41】までお願いします。","url":"https://booth.pm/ja/items/1121528","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/b5c5b880-b11f-4114-807f-4a3e0e9de138/i/1121528/7ba48706-8a65-4a92-8a7d-c4fee98c1e51_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="y6Op3QWaFUeDM5TEkqUWcU5VQqnjCZqHEuYtCzUtJ28="></script>
+    nonce="5lUauC5fL+rQo+hs9pzyWSVdokvCR4N/1PUtOSP0hfw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1121528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1121528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
