--- a/VRChat/31/1128331.html
+++ b/VRChat/31/1128331.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "qIM+8IeVv/o/lojGhC4SzvfA3MWmWT7c1f0RPupJN20="></script>
+    "JafIut+AAy4ob5yi0z35nCiUi0CUYU5MbV2KuxsSGQY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Magnifying Glass","description":"-特徴-\n虫眼鏡、ルーペのモデルデス\nVRChatでカメラとRenderTextureを簡単に設置するのに使ったため縁が太いデス\nポリゴン数　△720\n製作時Unityバージョン　2018.4.20f1\n\n-更新履歴-\n2020年12月19日\n　Unityパッケージ化\n　質感用のテクスチャ追加\n　メッシュの大きさを修正\n　データ内の日本語文字を英語文字に修正\n\n-内容物-\n・Magnifying_Glass.fbx\n・Magnifying_Glass.unitypackage\n・更新履歴.txt\n\n-利用規約-\n当モデルは、憂人本家が作成した3Dオブジェクトデス\n当モデルデータの利用者はモデルデータの利用をもって本利用規約に同意したものとみなしますデス\n\nVRChatやUnity製作物やMMD等での利用が可能デス\n改変やペデスタル等での二次配布や商用利用が可能デス\n\n再販や悪意のある利用はしないで下さいデス\n\n利用規約はダウンロード時点での情報ではなく最新の情報が優先されますデス\n当モデルで生じたいかなる損害やトラブルに対して憂人本家は一切責任を負いませんデス\n日本国の著作権法に保護された著作物であることをご留意くださいデス","url":"https://booth.pm/ja/items/1128331","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b38e460c-5ac5-4c59-aaae-e30f1fceea3a/i/1128331/6226a15f-4d4c-4089-9268-e6ab259569fa_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qIM+8IeVv/o/lojGhC4SzvfA3MWmWT7c1f0RPupJN20="></script>
+    nonce="JafIut+AAy4ob5yi0z35nCiUi0CUYU5MbV2KuxsSGQY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1128331/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1128331/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
