--- a/VRChat/79/1128279.html
+++ b/VRChat/79/1128279.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yVqzwJP1fJgJBv9mdRaWQnxMihJvMF4FUCNKGk7i0X4="></script>
+    "CmyTZpTnIk4UBXs8zijGVqKhEW0fb09/1EpiR1ooywk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"うさみみ帽子","description":"・うさみみの部分にボーンが入っています　\n　優しく揺らしてください\n\n・テクスチャファイル・FBXファイルが入ってます","url":"https://booth.pm/ja/items/1128279","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ebffffd0-532e-400b-afe2-d3306d212fc5/i/1128279/5d7b3928-dbc0-498d-b585-daa7110ed4c5_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yVqzwJP1fJgJBv9mdRaWQnxMihJvMF4FUCNKGk7i0X4="></script>
+    nonce="CmyTZpTnIk4UBXs8zijGVqKhEW0fb09/1EpiR1ooywk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1128279/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               485
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1128279/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               485
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
