--- a/VRChat/59/1128159.html
+++ b/VRChat/59/1128159.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LrYEg+j9jRj9S0csqna3/PINC0vBRz31PnyXcoxAcR4="></script>
+    "XtHMBa0ZSuGzDUc0PoMCKRRipyt5gzPoF9MxCa29+UY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"写真入れ付き首輪","description":"写真入れ付きの首輪のモデルデータです。\n\n首輪(写真入付）△876\n首輪単体　　　 △492\n\nお気に入りのSSなんかを入れて首元をコーデしよう！\n\n使用前に同梱されている利用規約を必ずお読みください。","url":"https://booth.pm/ja/items/1128159","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/df2fcbc6-c239-4f26-9257-d1413e88cdcd/i/1128159/3fdd248c-2cec-4568-8cb7-e4dab7a93324_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LrYEg+j9jRj9S0csqna3/PINC0vBRz31PnyXcoxAcR4="></script>
+    nonce="XtHMBa0ZSuGzDUc0PoMCKRRipyt5gzPoF9MxCa29+UY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1128159/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               446
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1128159/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               446
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
