--- a/VRChat/42/1127542.html
+++ b/VRChat/42/1127542.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "hOUlHTtNNxBEYm1E4Uo+uTCGh5ndKSEhChgJn8pHwSQ="></script>
+    "poZ04tJMhzui3ICG24ucRene/V4GqTQ7/XtwRd0W7Ps="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル　M9腕輪型電子デバイス","description":"□SF・サイバーパンク風腕輪型電子デバイスの3Dモデルです。\n手鏡機能付き。\n600△ポリゴン。\n→手鏡機能の大雑把なサンプル\nhttps://twitter.com/mabo_to_fu/status/1069674004636622848\n\n□内容\n・M9Device.fbx　本体\n\n・M9Device.unitypackage　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weapon/M9Deviceフォルダに作成されます。\n\nunitypackage版にはVRChatなどで使える手鏡機能が予めセットアップ済みです。\n\n\n□手鏡機能について\n\nunitypackage版をインポート・prefabをHierarchy上に配置後、「Monitor1」というオブジェクトのブレンドシェイプを100にする事で画面部分が展開されます。\nデフォルトで鏡機能が実装済みです。\n\njoint1を回転させる事で画面を腕輪のレールに沿って回転させることが出来ます。\n\n\n□利用規約\n\n原則として再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/12/06：販売開始","url":"https://booth.pm/ja/items/1127542","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1127542/41a3b26a-df12-4efa-bbc8-cc8bce7bed85_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="hOUlHTtNNxBEYm1E4Uo+uTCGh5ndKSEhChgJn8pHwSQ="></script>
+    nonce="poZ04tJMhzui3ICG24ucRene/V4GqTQ7/XtwRd0W7Ps="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1127542/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1127542/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               164
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
